Fixed issue on iOS devices: details are not displaying.

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -25,7 +25,7 @@
 .social-container {
   right: 0;
   position: absolute;
-  margin-top: -30px;
+  margin-top: -1.75rem;
   margin-right: 4px;
   padding-right: 20px;
 }
